--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,25 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.header{
+  width: 100%;
+  margin: auto;
+  background-color: black;
+}
+
 .main-Header{
   width: 80%;
   margin: auto;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 30px;
+  color:white;
+}
 
+.headerText{
+  text-align: left;
+}
+
+.fa-github{
+  width: 50px;
+  height: 50px;
 }
