--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,23 @@
 
 .header{
   width: 100%;
+  height: 400px;
   margin: auto;
   background-color: black;
+  max-height: 600px;
 }
 
 .main-Header{
   width: 80%;
+  height: 100%;
   margin: auto;
   text-align: center;
   padding-top: 30px;
   color:white;
+  background-image: url("./img/JuanPort.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  bottom: 0;
 }
 
 .headerImg{
@@ -39,11 +46,31 @@
   background-color: #313131;
 }
 
-.aboutMeContainer{
+.aboutMeContainerMobile{
   width: 80%;
   margin: auto;
-  display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+@media only screen and (max-width: 600px){
+  .aboutMeContainerMobile{
+    display: flex;
+  }
+
+  .aboutMeContainer{
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px){
+  .aboutMeContainerMobile{
+    display: none;
+  }
+
+  .aboutMeContainer{
+    display: flex;
+  }
 }
 
 .accent{
@@ -79,6 +106,37 @@
 
 
 /* ---------PROJECTS START--------- */
+
+.project{
+  width: 100%;
+  margin: auto;
+  background-color: black;
+}
+
+.projectContainerMain{
+  width: 80%;
+  margin: auto;
+}
+
+.project h2{
+  color: white;
+}
+
+.project-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  max-width: 700px;
+}
+
+.projects-Box{
+  width: 250px;
+  height: 200px;
+  background-color: blue;
+  margin: 12px;
+}
 
 
 
