--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,6 @@
   margin: auto;
   flex-direction: column;
   align-items: center;
-  height: 890px;
 }
 
 @media only screen and (max-width: 600px){
@@ -123,7 +122,11 @@
   color: white;
   width: 100px;
   margin-bottom: 12px;
-  position: absolute;
+  position: unset;
+}
+
+.text-box{
+  position: relative;
 }
 
 /* ---------ABOUT ME END--------- */
