--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,9 @@
 
 /* ---------PROJECTS END--------- */
 
+/* ---------CONTACT ME START--------- */
 
+/* ---------CONTACT ME END--------- */
 
 
 .fa-github{
